force-app/main/default/objects/Service_Catalogues__c/Service_Catalogues__c.object-meta.xml
<CustomObject>
    <label>Services Catalogue</label>
    <nameField>
        <displayFormat>SC-{0000}</displayFormat>
        <label>Service Catalogue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Services Catalogue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>