force-app/main/default/objects/Service_Catalogues__c/fields/Account_Journey_Stage__c.field-meta.xml
<CustomField>
    <fullName>Account_Journey_Stage__c</fullName>
    <label>Account Journey Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New to Product</fullName>
            </value>
            <value>
                <fullName>In first year of using product</fullName>
            </value>
            <value>
                <fullName>Been using the product for some time</fullName>
            </value>
            <value>
                <fullName>Applicable to all</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>