force-app/main/default/objects/Service_Catalogues__c/fields/Calcuated_Success_Points__c.field-meta.xml
<CustomField>
    <fullName>Calcuated_Success_Points__c</fullName>
    <description>Calculates the Success Points based on the monetary value</description>
    <formula>CEILING((Service_Cost__c * 0.63)/10)*10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Success Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>