force-app/main/default/objects/Service_Catalogues__c/fields/Days_to_Deliver__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Deliver__c</fullName>
    <label>Days to Deliver</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>