force-app/main/default/objects/Service_Catalogues__c/fields/Delivered_By__c.field-meta.xml
<CustomField>
    <fullName>Delivered_By__c</fullName>
    <label>Delivered By</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>Customer Success Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>