force-app/main/default/objects/Service_Catalogues__c/fields/Delivery_Type__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Type__c</fullName>
    <label>Delivery Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bite Size</fullName>
            </value>
            <value>
                <fullName>Virtual Classroom</fullName>
            </value>
            <value>
                <fullName>Classroom</fullName>
            </value>
            <value>
                <fullName>1:1 Consulting</fullName>
            </value>
            <value>
                <fullName>1:Many Consulting</fullName>
            </value>
            <value>
                <fullName>Remote Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>