force-app/main/default/objects/Service_Catalogues__c/fields/Estimate_Required__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Leave the Points Conversion field empty and check this box if this Service requires our team to estimate the effort per customer request.</inlineHelpText>
    <label>Estimate Required</label>
    <type>Checkbox</type>
</CustomField>