force-app/main/default/objects/Service_Catalogues__c/fields/Hours_to_Deliver__c.field-meta.xml
<CustomField>
    <fullName>Hours_to_Deliver__c</fullName>
    <label>Hours to Deliver</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>