force-app/main/default/objects/Service_Catalogues__c/fields/Points_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Points_Conversion__c</fullName>
    <label>Points Conversion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>