force-app/main/default/objects/Service_Catalogues__c/fields/Premier_Only__c.field-meta.xml
<CustomField>
    <fullName>Premier_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Premier Only</label>
    <type>Checkbox</type>
</CustomField>