force-app/main/default/objects/Service_Catalogues__c/fields/Service_Cost__c.field-meta.xml
<CustomField>
    <fullName>Service_Cost__c</fullName>
    <description>Cost of the service in Pounds to be converted to Points</description>
    <label>Service Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>