force-app/main/default/objects/Service_Catalogues__c/fields/Service_Outcomes__c.field-meta.xml
<CustomField>
    <fullName>Service_Outcomes__c</fullName>
    <label>Service Outcomes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>