force-app/main/default/objects/Service_Catalogues__c/fields/Service_Prerequisites__c.field-meta.xml
<CustomField>
    <fullName>Service_Prerequisites__c</fullName>
    <label>Service Prerequisites</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>