force-app/main/default/objects/Service_Catalogues__c/fields/Service_Title__c.field-meta.xml
<CustomField>
    <fullName>Service_Title__c</fullName>
    <label>Service Title</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>