force-app/main/default/objects/Service_Catalogues__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Analytics/Reporting</fullName>
            </value>
            <value>
                <fullName>Configurations and Customisation</fullName>
            </value>
            <value>
                <fullName>Education/Training</fullName>
            </value>
            <value>
                <fullName>Flightpath Implementation Extras/Add Ons</fullName>
            </value>
            <value>
                <fullName>Integrations</fullName>
            </value>
            <value>
                <fullName>Strategic Engagements</fullName>
            </value>
            <value>
                <fullName>Upgrade and Migration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>