force-app/main/default/objects/Service_Catalogues__c/fields/User_Level__c.field-meta.xml
<CustomField>
    <fullName>User_Level__c</fullName>
    <label>User Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Beginner</fullName>
            </value>
            <value>
                <fullName>Competent</fullName>
            </value>
            <value>
                <fullName>Expert</fullName>
            </value>
            <value>
                <fullName>Available for all levels</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>