force-app/main/default/objects/Service_Catalogues__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Products__c</columns>
    <columns>Service_Title__c</columns>
    <columns>Service_Description__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Products__c</field>
        <operation>equals</operation>
        <value>Abacus</value>
    </filters>
    <label>All</label>
</ListView>