force-app/main/default/objects/Service_Catalogues__c/listViews/All_Services_Catalogue.listView-meta.xml
<ListView>
    <fullName>All_Services_Catalogue</fullName>
    <columns>NAME</columns>
    <columns>Division__c</columns>
    <columns>Products__c</columns>
    <columns>Service_Type__c</columns>
    <columns>Service_Title__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Points_Conversion__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Division__c</field>
        <operation>equals</operation>
        <value>aCloud,ANZ,Attache,CHS,CTS,DLC,Education,FMS,HCM,Hospitality,HSC,Legal,NFP,No Primary Division,Payments,Recruitment,SCS,Workspace</value>
    </filters>
    <label>All Services Catalogue</label>
</ListView>