force-app/main/default/objects/Service_Catalogues__c/listViews/HSC_Services_Catalogue.listView-meta.xml
<ListView>
    <fullName>HSC_Services_Catalogue</fullName>
    <columns>NAME</columns>
    <columns>Division__c</columns>
    <columns>Products__c</columns>
    <columns>Service_Title__c</columns>
    <columns>Days_to_Deliver__c</columns>
    <columns>Hours_to_Deliver__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Division__c</field>
        <operation>equals</operation>
        <value>HSC</value>
    </filters>
    <label>HSC Services Catalogue</label>
</ListView>