force-app/main/default/objects/Service_Catalogues__c/listViews/NFP_Services_Catalogue.listView-meta.xml
<ListView>
    <fullName>NFP_Services_Catalogue</fullName>
    <columns>NAME</columns>
    <columns>Division__c</columns>
    <columns>Products__c</columns>
    <columns>Service_Title__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Division__c</field>
        <operation>equals</operation>
        <value>NFP</value>
    </filters>
    <label>NFP Services Catalogue</label>
</ListView>