force-app/main/default/objects/Service_Catalogues__c/listViews/No_Product.listView-meta.xml
<ListView>
    <fullName>No_Product</fullName>
    <columns>NAME</columns>
    <columns>Division__c</columns>
    <columns>Products__c</columns>
    <columns>Service_Title__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Products__c</field>
        <operation>equals</operation>
    </filters>
    <label>** No Product - should be empty</label>
</ListView>